fix product images gap

--- a/app/css/details/details.css
+++ b/app/css/details/details.css
@@ -281,13 +281,13 @@
 #details .product-img-list{
     width: 100%;
     height: auto;
-    margin-bottom: 6px;
+    margin-bottom: 0px;
 }
 
 #details .product-img-list img{
     width: 100%;
     height: auto;
-    margin-bottom: 6px;
+    margin-bottom: 0px;
 }
 
 
